--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header">
       <div class="container">
         <a href="#" class="logo">
-          <img src="assets/images/giuongbocda/logo.PNG" alt="Hana Bedding" />
+          <img src="assets/images/giuongbocda/logo.jpg" alt="Hana Bedding" />
         </a>
         <div class="header-title-mobile">Giường Bọc Da Cao Cấp</div>
         <div class="header-right">
