--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Hanabedding - Giường Bọc Da Cao Cấp | Thiết Kế Sang Trọng</title>
     <meta
       name="description"
