--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <span class="slider-hint slider-hint-right">&#10095;</span>
             </div>
 
-            <!-- Size Selector (moved here) -->
+            <!-- Size Selector (Mobile only - below image) -->
             <div class="size-section size-section-below-image">
               <div class="section-label">Chọn kích thước:</div>
               <div class="size-grid">
@@ -268,24 +268,103 @@
 
           <!-- RIGHT: Details -->
           <div class="product-details">
-            <!-- Description -->
-            <div class="product-description">
-              Chất liệu da cao cấp chống trầy, khung sườn chắc chắn chịu lực,
-              thiết kế thông minh tiết kiệm diện tích. Phù hợp mọi không gian
-              nhà ở sang trọng. <strong>Miễn Phí Ship và Giao Lắp</strong> khách
-              hàng tại Thành phố Hồ Chí Minh và một số khu vực tỉnh lân cận
-              trong phạm vi 50km.
-              <div class="policy-links">
-                <a href="chinh-sach-giao-lap.html">📦 Chính sách Giao Lắp</a>
-                <a href="chinh-sach-bao-hanh.html">🛡️ Chính sách Bảo Hành</a>
-              </div>
-            </div>
-
             <!-- Price -->
             <div class="price-section">
               <span class="price-old">5.500.000đ</span>
               <span class="price-current" id="displayPrice">3.699.000đ</span>
               <span class="price-badge">Giảm 33%</span>
+            </div>
+
+            <!-- Size Selector -->
+            <div class="size-section size-section-right">
+              <div class="section-label">Chọn kích thước:</div>
+              <div class="size-grid">
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="1m x 2m"
+                    data-price="3099000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">1m x 2m</span>
+                    <span class="price">3.099.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="1m2 x 2m"
+                    data-price="3299000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">1m2 x 2m</span>
+                    <span class="price">3.299.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="1m4 x 2m"
+                    data-price="3499000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">1m4 x 2m</span>
+                    <span class="price">3.499.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="1m6 x 2m"
+                    data-price="3699000"
+                    checked
+                  />
+                  <div class="size-btn">
+                    <span class="size">1m6 x 2m</span>
+                    <span class="price">3.699.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="1m8 x 2m"
+                    data-price="3999000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">1m8 x 2m</span>
+                    <span class="price">3.999.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="2m x 2m"
+                    data-price="4499000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">2m x 2m</span>
+                    <span class="price">4.499.000đ</span>
+                  </div>
+                </label>
+                <label class="size-option">
+                  <input
+                    type="radio"
+                    name="bedSize"
+                    value="2m2 x 2m"
+                    data-price="4999000"
+                  />
+                  <div class="size-btn">
+                    <span class="size">2m2 x 2m</span>
+                    <span class="price">4.999.000đ</span>
+                  </div>
+                </label>
+              </div>
             </div>
           </div>
         </div>
